# Scaling_ML_on_db

./: .gitignore  AGENTS.md  LEARNINGS.md  README.md  STATUS.md  STATUS_gpu.md  databricks.yml  generate_imbalanced_data.ipynb  pyproject.toml
.claude/skills/autoresearch-xgb/: SKILL.md  api-reference.md  notebook-format.md  phase-1-profile.md  phase-2-cluster.md  phase-3-features.md  phase-4-train.md  phase-5-finalize.md
.claude/skills/deploy-notebook-jobs/: SKILL.md  cluster-configs.md  error-diagnosis.md
.claude/skills/train-xgb-databricks/: SKILL.md  feature-prep.md  gotchas.md  track-ray-distributed.md  track-single-node-cpu.md  track-single-node-gpu.md
configs/: README.md  gpu_scaling.yml  ray_plasma.yml  ray_scaling.yml  single_node.yml
docs/: DEPLOYMENT.md  LEARNINGS.md  PROJECT_PLAN.md  TODO-benchmark-experiments.md  scaling-benchmark-report.md
docs/plans/: 2026-03-12-train-xgb-skill-design.md  2026-03-12-train-xgb-skill-plan.md  2026-03-19-autoresearch-agent-design.md  2026-03-19-autoresearch-agent-plan.md  2026-04-18-realistic-data-design.md
notebooks/: generate_imbalanced_data.ipynb  generate_realistic_data.ipynb  train_xgb_gpu.ipynb  train_xgb_ray.ipynb  train_xgb_ray_gpu.ipynb  train_xgb_ray_multigpu.ipynb  train_xgb_ray_plasma.ipynb  train_xgb_single.ipynb  train_xgb_sparkml_100m.ipynb
notebooks/experimental/: generate_ctgan_data.ipynb
results/: scaling_benchmark.csv
scripts/: dev.py
src/: __init__.py  benchmark.py  config.py  crash_retriever.py  validate_env.py
tests/unit/: test_benchmark.py  test_config.py
