[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scaling-xgb"
version = "0.1.0"
description = "Benchmarking and optimising distributed XGBoost on Databricks with Ray on Spark"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
# These are available on Databricks ML Runtime — not needed for local install
databricks = [
    "xgboost>=2.0",
    "mlflow>=2.10",
    "ray[default]>=2.30",
    "psutil>=5.9",
    "requests>=2.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["src*"]
